Fix enketo form footer margins so all buttons are visible

--- a/www/style/main.less
+++ b/www/style/main.less
@@ -4,5 +4,8 @@
 	.or-appearance-hidden {
 		display: none !important;
 	}
+	.form-footer {
+		margin: 0 !important;
+	}
 	@import '../../build/less/enketo';
 }
